# g600-mouse-controller

./: CMakeLists.txt  g600.c  main.cpp  makefile  scrap.txt
