cmake_minimum_required(VERSION 3.23)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/linux-$<LOWER_CASE:${CMAKE_BUILD_TYPE}>)
project(g600-mouse-controller)

add_executable(${PROJECT_NAME} g600.c)

message(${CMAKE_INSTALL_PREFIX})

add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND sudo -A chown root: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}
    COMMAND sudo -A chmod u+s ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}
    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
)

install(TARGETS ${PROJECT_NAME} DESTINATION bin)